# curl-wrapper

./: CMakeLists.txt  run.sh
src/: CMakeLists.txt  main.cpp
src/curlWrappers/: curlGlobalInitWrapper.hpp  curlRequestWrapper.cpp  curlRequestWrapper.hpp
